samples/_failures_safe/1761002662_ce1db6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02529d09.c: In function ‘tokenize’:
./samples/SAFE/__tmp_02529d09.c:169:13: error: expected expression at end of input
  169 |             success = parse_identifier(input, &pos, &token, line,
      |             ^~~~~~~
./samples/SAFE/__tmp_02529d09.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02529d09.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02529d09.c:169:13: error: expected declaration or statement at end of input
